2021-02-08  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Channel.java:
	Report InvocationTargetException.getCause().

	* pom.xml: Added spring-boot-starter-web.

2021-02-05  Allen D. Ball  <ball@hcf.dev>

	* Analyze JARs added to the Shell's classpath to determine the
	Maven artifact(s) implemented.

2021-02-03  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Shell.java:
	Added addToClasspath({File,Path}...) and
	addJarsToClasspath({File,Path}...) method variants.

	* Re-factored Shell as a Magic implementation.

	* src/main/java/galyleo/shell/magic/Magic.java:
	Added static getCellMagicCommand(String) method.

2021-02-02  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Message.java:
	Added static content(Object) method to create content for
	execute_result messages.

	* Create StaticImports.print(Object) -> ExecutionEvents.get(Shell)
	channel to create execution_result message content in the JShell
	instance.

	* Re-factored Magic interfaces to accept Shell instead of JShell.

2021-02-01  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Shell.java:
	Added addJarsToClasspath(String...) and addToClasspath(String...)
	methods.

	* src/main/java/galyleo/kernel/Kernel.java,
	src/main/java/galyleo/server/Server.java:
	Re-factored all communications code to Server.
	Add Spark JARs to classpath if SPARK_HOME is satisfied.

	* src/main/java/galyleo/shell/magic/:
	Initial magic implementation.

2021-01-31  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Java.java:
	Linked-in galyleo.shell.java.Imports.

2021-01-30  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Java.java:
	Implemented Java.execute(String).

2021-01-29  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Create a shaded JAR.

2021-01-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Message.java:
	Added Message creation methods for side-effect messages.

	* src/main/java/galyleo/server/Server.java: