@@ -1,5 +1,8 @@
 2021-02-08  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/server/Message.java:
+	Use JsonNode.toPrettyString() to implement toString().
+
 	* src/main/java/galyleo/server/Channel.java:
 	Report InvocationTargetException.getCause().
 
